# AutoSRTTranslator

./: .gitignore  README.md  pyproject.toml  srt_translator.py
translators/: __init__.py  base.py  bing_translate.py  deepseek_translate.py  gemini_translate.py  google_translate.py  llm_translate.py  openai_translate.py  yandex_translate.py
